welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:2: error: reassignment to val
	return ( a = b%10 )
                   ^